fix(): Add wrapping text to codeblock (#182)

--- a/src/_sass/elements/_code.scss
+++ b/src/_sass/elements/_code.scss
@@ -1,5 +1,6 @@
 code {
   font-size: 14px;
+  word-wrap: break-word;
 }
 
 :not(pre) > code {
